# advent-of-code-2022

./: README.md  pyproject.toml
advent_of_code/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
advent_of_code/static_files/: __init__.py
src/advent_of_code/static_files/: __init__.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
tests/advent_of_code/static_files/: __init__.py
