[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core~=3.8"]

[project]
name = "advent-of-code"
version = "0.1.0"
authors = [{ name = "Mike Alfare", email = "alfare@gmail.com" }]
description = "Advent of Code - 2022"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest~=7.2"
]
